deployments/kubernetes/gateway.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gateway
  namespace: assistant
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: 'ghcr.io/tsundata/gateway:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  namespace: assistant
  name: gateway
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: gateway
  type: LoadBalancer
