deployments/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: assistant
spec:
  rules:
    - host: api.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 5000
    - host: web.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 7000
  tls:
    - hosts:
        - api.dev
        - web.dev
      secretName: tsundata-tls
